--- a/sass/eat-beff.scss
+++ b/sass/eat-beff.scss
@@ -66,16 +66,25 @@ body .wrapper{
 					position: absolute;
 					left:0;
 					width: (183/354)*100%;
+					top:36%;
+				}
+				.left-hands-1{
+					top:33%;
+				}
+				.left-hands-2{
 					top:25%;
 				}
 				.right-hands{
-					top:33%;
+					top:34%;
 					position: absolute;
 					right: 0;
 					width: (183/354)*100%;
 					-webkit-transform: rotateY(180deg);
 					-moz-transform: rotateY(180deg);
 					transform: rotateY(180deg);
+				}
+				.right-hands-1{
+					top:25%;
 				}
 			}
 		}
