--- a/css/eat-beff.css
+++ b/css/eat-beff.css
@@ -49,8 +49,7 @@ html, body {
     .wrapper .bottom .desk, .wrapper .bottom .normal-part img {
       width: 100%; }
     .wrapper .bottom .player {
-      position: relative;
-      bottom: -3em; }
+      position: relative; }
       .wrapper .bottom .player .head {
         position: absolute;
         width: 74.57627%;
@@ -66,10 +65,6 @@ html, body {
       .wrapper .bottom .player .state-3 {
         position: absolute;
         top: -44%; }
-      .wrapper .bottom .player .time-up {
-        position: absolute;
-        top: 48%;
-        z-index: 800; }
       .wrapper .bottom .player .hands {
         z-index: 400; }
         .wrapper .bottom .player .hands .left-hands {
@@ -154,62 +149,58 @@ html, body {
   .result-box .point-hand {
     position: absolute;
     width: 7%;
-    left: 91%;
-    top: 12%;
+    left: 66%;
+    top: 17%;
     animation: handshake .8s ease-out infinite;
     -moz-animation: handshake .8s ease-out infinite;
     -webkit-animation: handshake .8s ease-out infinite; }
 
-@media screen and (min-device-width: 320px) {
+@media screen and (min-width: 320px) {
   body .wrapper {
     width: 320px;
     margin: 0 auto; } }
-@media screen and (device-width: 320px) {
-  body .wrapper {
-    width: 240px;
-    margin: 0 auto; } }
 @keyframes handshake {
   0% {
-    top: 12%; }
+    top: 17%; }
 
   25% {
-    top: 11%; }
+    top: 18%; }
 
   50% {
-    top: 10%; }
+    top: 19%; }
 
   75% {
-    top: 11%; }
+    top: 18%; }
 
   100% {
-    top: 12%; } }
+    top: 17%; } }
 @-webkit-keyframes handshake {
   0% {
-    top: 12%; }
+    top: 17%; }
 
   25% {
-    top: 11%; }
+    top: 18%; }
 
   50% {
-    top: 10%; }
+    top: 19%; }
 
   75% {
-    top: 11%; }
+    top: 18%; }
 
   100% {
-    top: 12%; } }
+    top: 17%; } }
 @-moz-keyframes handshake {
   0% {
-    top: 12%; }
+    top: 17%; }
 
   25% {
-    top: 11%; }
+    top: 18%; }
 
   50% {
-    top: 10%; }
+    top: 19%; }
 
   75% {
-    top: 11%; }
+    top: 18%; }
 
   100% {
-    top: 12%; } }
+    top: 17%; } }
